--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,10 @@
         "laravel/tinker": "~1.0"
     },
     "require-dev": {
+        "behat/behat": "^3.5",
         "filp/whoops": "~2.0",
         "fzaninotto/faker": "~1.4",
+        "laravel/passport": "~4.0",
         "mockery/mockery": "~1.0",
         "phpunit/phpunit": "~6.0",
         "symfony/thanks": "^1.0"
